# dynamic-packaging

./: .gitignore  .npmrc  ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  architecture.mermaid  docker-compose.yml  package.json  packing-contract.ts  packing_contract.py  pnpm-lock.yaml  tsconfig.base.json  技术选型说明.md
.claude/: launch.json
apps/admin-web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/admin-web/src/: App.tsx  ErrorBoundary.tsx  auth.tsx  main.tsx
apps/admin-web/src/api/: auth.ts  catalog.ts  client.ts  types.ts
apps/admin-web/src/components/: ProductFormModal.tsx
apps/admin-web/src/pages/: LoginPage.tsx  ProductsPage.tsx
apps/packing-web/: index.html  package.json  vite.config.ts  vitest.config.ts
apps/packing-web/src/: App.tsx  ErrorBoundary.tsx
apps/packing-web/src/api/: catalog.ts  client.ts  manifest.ts  solver.ts
apps/packing-web/src/components/: CanvasDropZone.tsx  ManifestPanel.tsx  Notice.tsx  ProductList.tsx  SelectionInfo.tsx  StatsPanel.tsx
apps/packing-web/src/packing/: heuristic.test.ts  heuristic.ts  worker.ts  workerClient.ts  workerTypes.ts
apps/packing-web/src/scene/: BinScene.tsx  Placements.tsx  coords.ts
apps/packing-web/src/store/: packingStore.ts
server/: .env.example  README.md  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0001_initial.py  0002_manifest.py  0003_product_thumbnail.py
server/app/: common.py  config.py  db.py  main.py  storage.py
server/app/auth/: deps.py  models.py  router.py  schemas.py  security.py  service.py
server/app/catalog/: models.py  router.py  schemas.py  service.py
server/app/contract/: packing_contract.py
server/app/manifest/: models.py  router.py  schemas.py  service.py
server/app/solver/: cache.py  packer.py  pool.py  router.py  service.py
server/tests/: conftest.py  test_catalog_auth.py  test_manifest.py  test_solver.py  test_solver_api.py  test_thumbnail.py
