[project]
name = "packing-server"
version = "0.0.0"
description = "物品动态装箱后端 (FastAPI 模块化单体: auth / catalog / solver / manifest)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "redis>=5.2",
    "pyjwt>=2.10",
    "bcrypt>=4.2",
    "python-multipart>=0.0.12",
    "boto3>=1.35",
]

[project.optional-dependencies]
# 求解器依赖 Phase 3 引入。
solver = ["py3dbp>=1.1.2"]

[dependency-groups]
dev = ["ruff>=0.8", "mypy>=1.13", "pytest>=8.3", "httpx>=0.28"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["boto3.*", "botocore.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
